--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ authors = [
 ]
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = ">=3.9"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph>=0.2.6",
     "python-dotenv>=1.0.1",
+    "langchain-ollama (>=0.2.3,<0.3.0)",
+    "langchain-google-community[gmail] (>=2.0.4,<3.0.0)",
 ]
 
 
