--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-    "langgraph>=0.2.6",
+    "langgraph (==0.2.73)",
     "python-dotenv>=1.0.1",
     "langchain-ollama (>=0.2.3,<0.3.0)",
     "langchain-google-community[gmail] (>=2.0.4,<3.0.0)",
+    "pydantic (>=2.10.6,<3.0.0)",
 ]
 
 
